--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@antv/data-set": "^0.10.0",
     "@babel/runtime": "^7.1.2",
     "antd": "^3.10.4",
+    "axios": "^0.18.0",
     "bizcharts": "^3.2.2",
     "bizcharts-plugin-slider": "^2.0.3",
     "classnames": "^2.2.6",
