--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-dom": "^16.5.1",
     "react-fittext": "^1.0.0",
     "react-router-dom": "^4.3.1",
-    "react-string-replace": "^0.4.1"
+    "react-string-replace": "^0.4.1",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.16",
