--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.18.0",
     "bizcharts": "^3.2.2",
     "bizcharts-plugin-slider": "^2.0.3",
+    "circular-json": "^0.5.9",
     "classnames": "^2.2.6",
     "dva": "^2.4.0",
     "enquire-js": "^0.2.1",
